Разбил код на модули, настроил webpack

--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,19 @@
   <!-- Сортировка -->
 
   <!-- Контент -->
+  <div class="films">
+    <section class="films-list">
+      <div class="films-list__container"></div>
+    </section>
+    <section class="films-list--extra">
+      <h2 class="films-list__title">Top rated</h2>
+      <div class="films-list__container"></div>
+    </section>
+    <section class="films-list--extra">
+      <h2 class="films-list__title">Most commented</h2>
+      <div class="films-list__container"></div>
+    </section>
+  </div>
 </main>
 
 
@@ -35,5 +48,6 @@
   </section>
 </footer>
 
+<script src="bundle.js"></script>
 </body>
 </html>
