WIP попытка рисовать попап, попытка реализации функционала кнопки shore more, и мелкие исправления замечаний

--- a/public/index.html
+++ b/public/index.html
@@ -44,7 +44,10 @@
 <footer class="footer">
   <section class="footer__logo logo logo--smaller">Cinemaddict</section>
   <section class="footer__statistics">
-    <p>130 291 movies inside</p>
+    <p>
+      <span class="footer__counter"></span>
+      movies inside
+    </p>
   </section>
 </footer>
 
