--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,12 @@
 
 <footer class="footer">
   <section class="footer__logo logo logo--smaller">Cinemaddict</section>
+  <section class="footer__statistics">
+    <p>
+      <span class="footer__counter"></span>
+      movies inside
+    </p>
+  </section>
 </footer>
 
 <script src="bundle.js"></script>
